...
                                <rect key="frame" x="29" y="161.5" width="317" height="344"/>
                                <subviews>
                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="SIGN UP" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8Su-I6-kJr">
                                        <rect key="frame" x="155" y="175.5" width="135" height="21"/>
                                        <constraints>
...
                                        <fontDescription key="fontDescription" name="HelveticaNeue-Bold" family="Helvetica Neue" pointSize="14"/>
                                        <color key="tintColor" red="0.99987119440000005" green="0.99998223779999995" blue="0.99984109399999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                        <state key="normal" title="LOG IN">
                                            <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                        </state>
...
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="EKy-1x-NKz">
                                        <rect key="frame" x="170" y="153" width="120" height="50"/>
                                        <accessibility key="accessibilityConfiguration" identifier="sign up" label="sign up"/>
                                        <constraints>
                                            <constraint firstAttribute="height" constant="50" id="5k7-EY-TvA"/>
...
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="IWF-L0-Ty0">
                                <rect key="frame" x="103.5" y="512" width="168" height="30"/>
                                <accessibility key="accessibilityConfiguration" hint="Forgot Password" identifier="Forgot Password" label="Forgot Password"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="30" id="Nck-Y8-3YX"/>
...
                                        </userDefinedRuntimeAttributes>
                                    </textField>
                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Name" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="mLv-Vs-EWP" customClass="ACFloatingTextfield" customModule="BookCrit" customModuleProvider="target">
                                        <rect key="frame" x="27" y="20" width="263" height="45"/>
                                        <accessibility key="accessibilityConfiguration" hint="Name" identifier="Name" label="Name"/>
...
                                        <fontDescription key="fontDescription" name="HelveticaNeue-Bold" family="Helvetica Neue" pointSize="14"/>
                                        <color key="tintColor" red="0.99987119440000005" green="0.99998223779999995" blue="0.99984109399999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                        <state key="normal" title="RESET PASSWORD">
                                            <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                        </state>
...
